# objectified

./: .cursorrules  .dockerignore  .gitignore  BUGFIX_ALLOF_EXAMPLE_GENERATION.md  BUGFIX_ALLOF_PROPERTIES.md  BUGFIX_COPY_NESTED_PROPERTIES.md  CLAUDE.md  COMPLETION_REPORT.md  CURRENT_ROADMAP.md  DOCUMENTATION_INDEX.md  FEATURE_PRIMITIVES.md  FEATURE_PRIMITIVES_SUMMARY.md  FEATURE_ROADMAP.md  FEATURE_ROADMAP_AI.md  FEATURE_ROADMAP_ANALYTICS.md  FEATURE_ROADMAP_API_KEYS.md  FEATURE_ROADMAP_BROWSER.md  FEATURE_ROADMAP_CANVAS.md  FEATURE_ROADMAP_CANVAS_LATER.md  FEATURE_ROADMAP_CODE_GENERATION.md  FEATURE_ROADMAP_DASHBOARD.md  FEATURE_ROADMAP_DATABASE_DATA_STORAGE.md  FEATURE_ROADMAP_DATA_TRANSFORM.md  FEATURE_ROADMAP_GITLIKE.md  FEATURE_ROADMAP_GOVERNANCE.md  FEATURE_ROADMAP_IMPORT.md  FEATURE_ROADMAP_LINTING.md  FEATURE_ROADMAP_MONITORING.md  FEATURE_ROADMAP_NGINX.md  FEATURE_ROADMAP_PATHS.md  FEATURE_ROADMAP_PROFILE.md  FEATURE_ROADMAP_ROLES_PERMISSIONS.md  FEATURE_ROADMAP_SCHEMA_SHOWCASE.md  FEATURE_ROADMAP_SECURITY.md  FEATURE_ROADMAP_TEMPLATES.md  FEATURE_ROADMAP_TEMPLATE_MARKETPLACE.md  FEATURE_ROADMAP_TENANCY.md  FEATURE_ROADMAP_TESTING.md  FEATURE_ROADMAP_VERSIONING.md  FUTURE_FEATURE_ROADMAP_AI.md  (+64 more)
objectified-cli/: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  config.sample.toml  eslint.config.mjs  install.sh  package.json  pyproject.toml  run.sh  tsconfig.json
objectified-cli/docs/: cli-security.md
objectified-cli/fixtures/: arazzo100.json  openapi31.yaml  petstore.yaml  swagger20.json
objectified-cli/scripts/: finish-codegen.mjs  fix-generated-imports.mjs  generate-man.mjs  normalize-readme-usage.mjs
objectified-cli/src/: base-command.ts  help.ts  index.ts
objectified-cli/test/: api-client.test.ts  audit.integration.test.ts  auth-cli-oauth.test.ts  auth-status.snap.test.ts  browse-public-projects-format.test.ts  browse-public-tenants-format.test.ts  browse-public-versions-format.test.ts  cli-context.test.ts  cli-whoami.test.ts  cli.integration.test.ts  client-parse.test.ts  config-path.test.ts  credentials-store.test.ts  domains-payload.test.ts  handle-error.snap.test.ts  help-manifest.test.ts  http-status-mapping.test.ts  import-spec-catalog-identity.test.ts  import-spec-client.test.ts  import-spec-format.test.ts  import-spec-openapi-audit.test.ts  import-spec-project-resolution.test.ts  normalize-argv.test.ts  output-renderers.test.ts  project-create-file-schema.test.ts  project-slug.test.ts  projects-create.integration.test.ts  projects-list-query.test.ts  projects-list.snap.test.ts  rc-completion.test.ts  redact-api-key.test.ts  scaffold.test.mjs  schema-fetch-helpers.test.ts  schema-fetch.integration.test.ts  schema-swagger-helpers.test.ts  schema-swagger.integration.test.ts  spec-import-flow.test.ts  tenants-render.snap.test.ts  turbo_pipeline.test.mjs  versions-create-helpers.test.ts  (+6 more)
objectified-cli/tests/: conftest.py  helpers.py  test_agents.py  test_api_keys_commands.py  test_arazzo_validation.py  test_auth_commands.py  test_client_errors.py  test_config.py  test_config_command.py  test_console_script.py  test_conversion_output.py  test_convert_command.py  (+64 more)
objectified-mcp/: .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  run.sh  tsconfig.json
objectified-rest/: .env.example  .gitignore  API_KEY_AUTHENTICATION.md  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  OPENAPI_DESCRIPTION_UPDATE.md  README.md  UV_SETUP_GUIDE.md  example_paths_generation.py  openapi.json  openapi.yaml  package.json  pyproject.toml  requirements.txt  run.sh  test_arazzo_endpoints.py  test_classes_api.py  test_compatibility_api.py  test_database_data_storage.py  test_description.py  test_integration_description.py  test_iso_primitives_preload.py  test_paths_integration.py  test_primitives_api.py  test_primitives_provenance.py  test_projects_api.py  test_schema_compatibility.py  test_service_running.py  test_swagger_endpoint.py  test_version_notes.py  test_versions_api.py
(+3798 files in other folders)
