[project]
name = "objectified-mcp"
version = "0.1.12"
description = "Model Context Protocol server for Objectified (FastMCP)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Objectified Team" }]
keywords = ["mcp", "fastmcp", "objectified", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "bcrypt>=4.0",
    "fastmcp>=3.2.0",
    "structlog>=24.4.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
]

[project.scripts]
objectified-mcp = "objectified_mcp.cli:main"
mcp = "objectified_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/objectified_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
